--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: Platane/snk@v3
         with:
           github_user_name: dharanidharansr
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: dist/github-contribution-grid-snake.svg?color_empty=#000000
       - name: Push changes
         uses: EndBug/add-and-commit@v9
         with:
