--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,14 +14,33 @@ permissions:
 jobs:
   generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
-      - uses: actions/checkout@v3
+      - uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: dharanidharansr
+          outputs: |
+            dist/only-svg/github-contribution-grid-snake.svg?color_snake=#9966FF&color_dots=#D8BFD8,#BA55D3,#9932CC,#800080,#4B0082&color_empty=#000000
+            dist/only-svg/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#9966FF&color_empty=#000000
+            dist/only-svg/github-contribution-grid-snake-purple.svg?color_snake=#9966FF&color_dots=#D8BFD8,#BA55D3,#9932CC,#800080,#4B0082&color_empty=#000000
       - uses: Platane/snk@v3
         with:
           github_user_name: dharanidharansr
-          outputs: dist/github-contribution-grid-snake.svg?color_empty=#000000
+          outputs: |
+            dist/docker/github-contribution-grid-snake.svg?color_snake=#9966FF&color_dots=#D8BFD8,#BA55D3,#9932CC,#800080,#4B0082&color_empty=#000000
+            dist/docker/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#9966FF&color_empty=#000000
+            dist/docker/github-contribution-grid-snake.gif?color_snake=#9966FF&color_dots=#D8BFD8,#BA55D3,#9932CC,#800080,#4B0082&color_empty=#000000
+      - name: ensure the generated file exists
+        run: |
+          ls dist
+          test -f dist/only-svg/github-contribution-grid-snake.svg
+          test -f dist/only-svg/github-contribution-grid-snake-dark.svg
+          test -f dist/only-svg/github-contribution-grid-snake-purple.svg
+          test -f dist/docker/github-contribution-grid-snake.svg
+          test -f dist/docker/github-contribution-grid-snake-dark.svg
+          test -f dist/docker/github-contribution-grid-snake.gif
       - name: Push changes
         uses: EndBug/add-and-commit@v9
         with:
           message: "Generate Snake Animation"
-          add: "dist/github-contribution-grid-snake.svg"
+          add: "dist/"
