--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      - uses: actions/checkout@v3
       - uses: Platane/snk/svg-only@v3
         with:
           github_user_name: dharanidharansr
